samples/_failures_safe/1761648324_47094e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_968be7f7.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_968be7f7.c:171:12: error: expected identifier at end of input
  171 |            state_names[sm->current_state], sm->
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_968be7f7.c:171:12: error: expected declaration or statement at end of input
